--- a/css/applist.css
+++ b/css/applist.css
@@ -1,9 +1,13 @@
+.privacy-policy-title a{
+  color: #666666;
+}
+
 .apps-app-item {
   display: inline-block;
   width: 8rem;
   vertical-align: top;
-  margin-right: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin: 1rem;
+  margin-top: 0em;
 }
 
 .apps-app-icon {
