fix:Meteorページの余白

--- a/css/meteor_base.css
+++ b/css/meteor_base.css
@@ -5,6 +5,7 @@ body
     font-family: 'GillSansStd-ExtraBold', sans-serif;
     font-size: 11px;
     background-color: #f7f6f9;
+    margin: 0px;
 }
 
 img
