--- a/css/custom.css
+++ b/css/custom.css
@@ -2,7 +2,7 @@
   width:100%;
   height:auto;
   border-radius:0%;
-  margin-top: -1.6rem;
+  margin-top: 0px;
 }
 @media only screen and (max-device-width:768px){
   .avatar img{width:100%}
@@ -43,11 +43,14 @@
 .centered {
     align-items: start;
     height: auto;
+    text-align: center;
 }
 
 .container {
     padding-left: 0rem;
     padding-right: 0rem;
+    margin: 0rem;
+    max-width: none;
 }
 
 a:before,a:after{
@@ -75,4 +78,12 @@ a:hover:before,a:hover:after{
 
 .centered h3{
   text-align: center;
+}
+
+.content {
+  margin: 0px;
+}
+
+.footer {
+  margin-bottom: 0px;
 }
