Deploy #25 from CircleCI [ci skip]

--- a/css/apppage.css
+++ b/css/apppage.css
@@ -4,6 +4,7 @@
   background-size: 100%,auto;
   background-attachment:scroll;
   padding-bottom: 70px;
+  height: 100%;
 }
 .apppage p{
   margin: 0px;
